--- a/index.html
+++ b/index.html
@@ -1,23 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CalistheniX</title>
 </head>
 
-<!-- links -->
+<!-- link bootstrap-->
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
+
+<!-- link css -->
 <link rel="stylesheet" href="/css/estilos.css">
+
+<!-- link js -->
+
+<script src="./js/estilos.js"></script>
 
 <body>
     <header>
 
+        <!-- nav bar -->
+
+        <nav class="navbar">
+            <div class="navbarLogo"><img src="./img/logo.jpg" alt="logo de calisthenix"></div>
+            <ul class="navbarNavegacion">
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Sobre nosotros</a></li>
+                <li><a href="#">Contacto</a></li>
+                <li><a href="#">Redes sociales</a></li>
+            </ul>
+
+            <!-- menu hamburguesa -->
+
+        </nav>
     </header>
     <main>
 
+        <!-- carrousel bootstrap -->
+
+        <div class="carousel">
+
+        </div>
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
