--- a/index.html
+++ b/index.html
@@ -7,36 +7,28 @@
     <title>CalistheniX</title>
 </head>
 
-<!-- link bootstrap-->
-
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-
+<!-- iconos bootstrap -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
 <!-- link css -->
 <link rel="stylesheet" href="/css/estilos.css">
-
-<!-- link js -->
-
-<script src="./js/estilos.js"></script>
 
 <body>
     <header>
 
         <!-- nav bar -->
-
-        <nav class="navbar">
-            <div class="navbarLogo"><img src="./img/logo.jpg" alt="logo de calisthenix"></div>
+        <img class="navbarLogo" src="./img/logo.png" alt="logo">
+        <button id="abrir" class="abrirMenu"><i class="bi bi-list"></i></button>
+        <nav class="navbar" id="nav">
+            <button id="cerrar" class="cerrarMenu"><i class="bi bi-x-lg"></i></button>
             <ul class="navbarNavegacion">
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Sobre nosotros</a></li>
                 <li><a href="#">Contacto</a></li>
                 <li><a href="#">Redes sociales</a></li>
             </ul>
-
-            <!-- menu hamburguesa -->
-
         </nav>
+
     </header>
     <main>
 
@@ -49,6 +41,8 @@
     <footer>
 
     </footer>
+
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
