--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <!-- iconos bootstrap -->
+
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
 <!-- link css -->
@@ -16,32 +17,98 @@
 <body>
     <header>
 
-        <!-- nav bar -->
+        <!-- inicio de la nav bar -->
         <img class="navbarLogo" src="./img/logo.png" alt="logo">
         <button id="abrir" class="abrirMenu"><i class="bi bi-list"></i></button>
         <nav class="navbar" id="nav">
             <button id="cerrar" class="cerrarMenu"><i class="bi bi-x-lg"></i></button>
             <ul class="navbarNavegacion">
-                <li><a href="#">Inicio</a></li>
+                <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#">Sobre nosotros</a></li>
+                <li><a href="#">Socios</a></li>
+                <li><a href="#">Planificaciones</a></li>
                 <li><a href="#">Contacto</a></li>
                 <li><a href="#">Redes sociales</a></li>
             </ul>
         </nav>
-
+        <!-- fin de la nav bar -->
     </header>
     <main>
 
-        <!-- carrousel bootstrap -->
+        <!-- inicio del inicio -->
+        <div class="inicio" id="inicio">
+            <div class="inicioFlex">
 
-        <div class="carousel">
+                <!-- inicio de la presentacion y bienvenida -->
+                <div class="inicioPresentacion">
+                    <h1>¡Bienvenido a CalistheniX!</h1>
+                    <p>Tu destino para lograr un cuerpo fuerte y saludable a través de la calistenia. Nuestro equipo de
+                        expertos está aquí para guiarte, motivarte y personalizar tus entrenamientos, todo desde la
+                        comodidad de tu hogar. Descubre el poder del peso corporal y desbloquea tu máximo potencial
+                        fitness. ¡Únete a nosotros y comienza tu transformación hoy mismo!</p>
+                </div>
+                <!-- final de la presentacion y bienvenida -->
+
+                <!-- inicio de la imagen de bienvenida -->
+                <div class="inicioImg">
+                    <img src="./img/calistenia1.jpg" alt="hombre entrenando" class="imagenIni">
+                </div>
+                <!-- final de la imagen de bienvenida -->
+            </div>
+        </div>
+        <!-- fin del incio-->
+
+        <!-- inicio de la linea-->
+        <div class="linea">
+            <p>¡Descarga nuestra app!</p>
+            <img src="./img/googleplay.png" alt="link de descarga google play">
+            <img src="./img/appstore.png" alt="link de descarga appstore">
+        </div>
+        <!-- fin de la linea -->
+
+        <!-- inicio de "sobre nosotros" -->
+        <div class="sobreNosotros">
+
+            <!-- flex de "sobre nosotros" -->
+            <div class="sobreNosotrosFlex">
+
+                <!-- img de "sobre nosotros" -->
+                <div class="sobreNosotrosImg">
+                    <img src="./img/calistenia2.jpg" alt="hombre entrenando">
+                </div>
+                <!-- final de la img de "sobre nosotros" -->
+
+                <!-- inicio de la presentacion -->
+                <div class="sobreNosotrosPresentacion">
+                    <h1>Sobre nosotros</h1>
+                    <p>Ofrecemos servicios personalizados, como asesorías online, donde nuestros expertos entrenadores
+                        te brindarán apoyo y orientación a través de sesiones de video. Diseñamos programas de
+                        entrenamiento adaptados a tus objetivos individuales, habilidades y limitaciones. <br>
+
+                        Además, también ofrecemos planificaciones de entrenamiento preestablecidas, adecuadas para
+                        diferentes niveles de habilidad y objetivos. Estos planes detallados te guiarán en una
+                        progresión efectiva, desarrollando fuerza, resistencia, flexibilidad y habilidades específicas
+                        de calistenia. <br>
+
+                        En CalistheniX, valoramos la comunidad y te brindamos la oportunidad de conectarte con otros
+                        entusiastas de la calistenia a través de nuestras redes sociales y foros en línea. <br>
+
+                        Únete a nosotros hoy mismo y descubre cómo transformar tu cuerpo utilizando el poder de tu
+                        propio peso corporal. ¡Bienvenido a CalistheniX!</p>
+                </div>
+                <!-- final de la presentacion -->
+
+            </div>
+            <!-- fin del flex de "sobre nosotros" -->
 
         </div>
+        <!-- final de "sobre nosotros" -->
     </main>
     <footer>
 
     </footer>
 
+    <!-- link de javaScript-->
     <script src="./js/script.js"></script>
 </body>
 
